# AirMic-esp32

./: .gitignore  README.md
desktop-app/: README.md  build_desktop_app.bat  build_desktop_app.py  requirements.txt  start_airmic_desktop.bat  start_airmic_desktop_debug.bat  start_airmic_desktop_dev.bat  start_airmic_path_watch.bat
desktop-app/app/: main.py  runtime_paths.py  version.py
desktop-app/app/styles/: scaling.py  theme.py
desktop-app/app/widgets/: shortcut_recorder.py
desktop-app/app/windows/: frameless.py  log_window.py  (+1 more)
desktop-app/migration_staging/: airmic_ptt_bridge.py  airmic_ptt_gui.py  pc_bridge_README.md
desktop-app/services/: audio_status_watch_service.py  backend_coordinator.py  diagnostics_log_service.py  global_shortcut_recorder.py  probe_service.py  settings_service.py  shortcut_service.py  single_instance_service.py  startup_service.py
desktop-app/tests/: test_app_state.py  test_audio_status_watch_service.py  test_dev_runner.py  test_diagnostics_log_service.py  test_display_scaling.py  test_global_shortcut_recorder.py  test_probe_service.py  test_shortcut_catalog.py  test_shortcut_recorder.py  test_single_instance_service.py  test_startup_service.py  test_tone_codec.py  test_ui_windows.py
desktop-app/tools/: dev_runner.py
firmware-esp32-hfp/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
firmware-esp32-hfp/main/: CMakeLists.txt  audio_math.c  audio_math.h  board_config.h  bt_hfp_hf.c  bt_hfp_hf.h  bt_hid_keyboard.c  bt_hid_keyboard.h  button_ptt.c  button_ptt.h  hfp_audio_source.c  hfp_audio_source.h  main.c
(+11 files in other folders)
